# gtd-mcp

./: .gitignore  .python-version  README.md  config.example.json  pyproject.toml
docs/features/project-completion/: design.md  requirements.md  tasks.md
docs/features/project-creation/: design.md  requirements.md  tasks.md
src/execution_system_mcp/: __init__.py  action_lister.py  action_manager.py  area_lister.py  auditor.py  completer.py  config.py  creator.py  goal_lister.py  lister.py  project_manager.py  searcher.py  server.py  validator.py
src/gtd_mcp/: __init__.py  action_lister.py  action_manager.py  area_lister.py  auditor.py  completer.py  config.py  creator.py  goal_lister.py  lister.py  project_manager.py  searcher.py  server.py  templates.py  validator.py
tests/unit/: test_action_lister.py  test_action_manager.py  test_area_lister.py  test_auditor.py  test_completer.py  test_config.py  test_creator.py  test_goal_lister.py  test_lister.py  test_project_manager.py  test_searcher.py  test_server.py  test_templates.py  test_validator.py
